<resources>
    <string name="app_name">Сканер QR-кода</string>
    <string name="full_name">ФИО</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="sign_in">Есть аккаунт? Войти</string>
    <string name="login">Войти</string>
    <string name="sign_up">Нет аккаунта? Зарегистрироваться</string>
    <string name="generate">Сгенерировать</string>
    <string name="image">Изображение</string>
    <string name="generation_text">Текст для генерации</string>
    <string name="lecturer">На препода</string>
    <string name="student">На студента</string>
    <string name="registration">Регистрация</string>
    <string name="log_in">Вход</string>
    <string name="qr_code">Генерация QR-кода</string>
    <string name="groups">Введите группы</string>
    <string name="item">Введите предмет</string>
    <string name="hamburger">hamburger</string>
    <string name="VDISHP">ВДИШП</string>
    <string name="_072302">072302</string>
    <string name="_7_00_pm">7:00 pm</string>
    <string name="username">Имя пользователя</string>
    <string name="greeting">Здравствуйте, %s</string>
    <string name="sign_up_lecturer">Зарегистрироваться как преподаватель</string>
    <string name="sign_up_student">Зарегистрироваться как студент</string>
    <string name="lessons_yes">Посещённые пары</string>
    <string name="_072302_072301_072304_072301">072302, 072301, 072304, 072301</string>
    <string name="lessons_com">Проведённые пары</string>
    <string name="students">Студенты</string>
    <string name="exit">Выход</string>
    <string name="settings">Настройки</string>
    <string name="menu">Меню</string>
</resources>