<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lesson"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/VDISHP"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingStart="15dp"
            android:paddingTop="30dp"
            android:paddingEnd="15dp"
            android:text="@string/_7_00_pm" />

        <TextView
            android:id="@+id/groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingStart="15dp"
            android:paddingTop="30dp"
            android:paddingEnd="15dp"
            android:text="@string/_072302_072301_072304_072301"
            android:textAlignment="center" />
    </RelativeLayout>

</LinearLayout>
